--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -35,8 +35,11 @@ command.game:
 command.charts:
   - "📈 Пожалуйста, выберите график 📉"
 command.subscribe:
-  - "Подписка чата `%d` на сообщения MotoFan.Ru"
-  - "Статус: %s"
+  - "Подписка чата `%d` на различные каналы.\n"
+  - "Новые сообщения форума MotoFan.Ru"
+  - "Статус: %s\n"
+  - "Дайджесты и новости группы MotoFan.Ru в Telegram:"
+  - "Статус: %s\n"
   - "Пожалуйста выберите действие:"
 command.subscribe.subscribed:
   - "✅ Подписка оформлена."
