Add links to digest answer

--- a/src/main/resources/digestbot/Phrases_en.yml
+++ b/src/main/resources/digestbot/Phrases_en.yml
@@ -80,6 +80,8 @@ command.digest.marker:
   - "•"
 command.digest.marker.new:
   - "🆕"
+command.digest.link:
+  - "➡️"
 command.show.header:
   - "Latest digests, use `/delete <id>` for deleting entry:"
 command.show.ellipsis:
