--- a/src/main/resources/digestbot/Phrases_ru.yml
+++ b/src/main/resources/digestbot/Phrases_ru.yml
@@ -80,6 +80,8 @@ command.digest.marker:
   - "•"
 command.digest.marker.new:
   - "🆕"
+command.digest.link:
+  - "➡️"
 command.show.header:
   - "Список дайджестов, для удаления отправьте `/delete <id>`:"
 command.show.ellipsis:
