Implement some of bank parsers

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,5 @@
  * This is a general purpose Gradle build.
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
  */
+
+version = '0.0.1-SNAPSHOT'
