--- a/exchange-library/build.gradle
+++ b/exchange-library/build.gradle
@@ -22,12 +22,8 @@ jar {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.jsoup:jsoup:1.12.1'
-
-	compileOnly 'org.projectlombok:lombok:1.18.10'
-	annotationProcessor 'org.projectlombok:lombok:1.18.10'
-
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
