--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+exchange.useSpringRestTemplate=true
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bankUa=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
-exchange.bankUaMirror=https://pf-soft.net/service/currency/
+exchange.bankUaMirror=http://pf-soft.net/service/currency/
 exchange.bankBy=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankByMirror=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
