--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -2,10 +2,9 @@ exchange.useSpringRestTemplate=true
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bankUa=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
+# TODO: HTTPS instead of HTTP
 exchange.bankUaMirror=http://pf-soft.net/service/currency/
 exchange.bankBy=https://nbrb.by/Services/XmlExRates.aspx
-exchange.bankByMirror=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
-exchange.bankKzMirror=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metalRu=https://www.cbr.ru/hd_base/metall/metall_base_new/
-exchange.metalRuMirror=https://www.cbr.ru/hd_base/metall/metall_base_new/
+exchange.metalRuMirror=https://mfd.ru/centrobank/preciousmetals/
