--- a/exchange-library/build.gradle
+++ b/exchange-library/build.gradle
@@ -23,9 +23,8 @@ jar {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.jsoup:jsoup:1.12.1'
-
-	implementation project(':bridge-library')
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
