Fix test configuration

--- a/exchange-library/src/test/resources/application-test.properties
+++ b/exchange-library/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/digestbot_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/digestbot_test
 spring.datasource.username=username
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
@@ -10,8 +10,7 @@ general.lang=ru
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bankUa=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
-# TODO: HTTPS instead of HTTP
-exchange.bankUaMirror=http://pf-soft.net/service/currency/
+exchange.bankUaMirror=https://pf-soft.net/service/currency/
 exchange.bankBy=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metalRu=https://www.cbr.ru/hd_base/metall/metall_base_new/
