--- a/exchange-library/build.gradle
+++ b/exchange-library/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
 	implementation 'org.jsoup:jsoup:1.12.1'
 
+	runtimeOnly 'org.postgresql:postgresql'
+
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
