Update configuration files

--- a/exchange-library/src/test/resources/application-test.properties
+++ b/exchange-library/src/test/resources/application-test.properties
@@ -15,5 +15,4 @@ exchange.bankBy=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metalRu=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metalRuMirror=https://mfd.ru/centrobank/preciousmetals/
-
-cron.exchange.update=0 0 0/12 1/1 * ?
+exchange.cron.update=0 0 0/12 1/1 * ?
