--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/digestbot_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/digestbot_prod
 spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
@@ -10,11 +10,9 @@ general.lang=ru
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
 exchange.bankUa=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
-# TODO: HTTPS instead of HTTP
-exchange.bankUaMirror=http://pf-soft.net/service/currency/
+exchange.bankUaMirror=https://pf-soft.net/service/currency/
 exchange.bankBy=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metalRu=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metalRuMirror=https://mfd.ru/centrobank/preciousmetals/
-
-cron.exchange.update=0 0 0/12 1/1 * ?
+exchange.cron.update=0 0 0/12 1/1 * ?
