--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@
  * in the user manual at https://docs.gradle.org/6.0.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'JMotoEngine'
+rootProject.name = 'JDigestBot'
 
 include 'exchange-library'
 include 'engine'
