--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@
 # These are explicitly windows files and should use crlf
 *.bat           text eol=crlf
 
+#
+# https://github.com/github/linguist
+#
+# Drop HTML and XML test files from statistics
+exchange-library/src/test/resources/parser/* linguist-vendored
