Add Motofan Crawler module

--- a/digest-site/build.gradle
+++ b/digest-site/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	implementation project(':exchange-manager')
+	implementation project(':motofan-crawler')
 
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
