--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -16,3 +16,5 @@ exchange.bankKz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metalRu=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metalRuMirror=https://mfd.ru/centrobank/preciousmetals/
 exchange.cron.update=0 0 0/12 1/1 * ?
+
+motofan.lastPostUrl=https://forum.motofan.ru/lastpost_json.php
