--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
 general.lang=ru
+general.connection.timeout=5
 
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
