Refactor start module project structure

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,4 @@ rootProject.name = 'JDigestBot'
 include 'exchange-manager'
 include 'motofan-crawler'
 include 'digest-site'
-include 'starter'
+include 'digest-launcher'
