--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,4 @@ rootProject.name = 'JDigestBot'
 include 'exchange-manager'
 include 'motofan-crawler'
 include 'digest-site'
-include 'digest-launcher'
+include 'digest-boot'
