Add chart-manager module

--- a/digest-boot/build.gradle
+++ b/digest-boot/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
 	implementation project(':digest-site')
 	implementation project(':exchange-manager')
+	implementation project(':chart-manager')
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
