--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ rootProject.name = 'JDigestBot'
 include 'exchange-manager'
 include 'motofan-crawler'
 include 'digest-site'
+include 'chart-manager'
 include 'digest-boot'
