Add rest-manager module

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'exchange-manager'
 include 'motofan-crawler'
 include 'digest-site'
 include 'chart-manager'
+include 'rest-manager'
 include 'digest-boot'
