--- a/digest-boot/src/main/resources/application.properties
+++ b/digest-boot/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
 general.lang=ru
-general.connection.timeout=5
+
+rest.timeout=5
+rest.maxBodySize=5242880
 
 exchange.bankRu=https://www.cbr.ru/scripts/XML_daily.asp?
 exchange.bankRuMirror=https://www.cbr-xml-daily.ru/daily.xml
