Add motofan skeleton and i18n module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
+general.lang=ru
+
 rest.timeout-sec=5
 rest.max-body-size=5242880
 
+motofan.last-post-url=https://forum.motofan.ru/lastpost_json.php
