Add exchange manager and tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ rest.timeout-sec=5
 rest.max-body-size=5242880
 
 motofan.last-post-url=https://forum.motofan.ru/lastpost_json.php
+
+exchange.bank-ru=https://www.cbr.ru/scripts/XML_daily.asp?
+exchange.bank-ru-mirror=https://www.cbr-xml-daily.ru/daily.xml
+exchange.bank-ua=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange
+exchange.bank-ua-mirror=https://pf-soft.net/service/currency/
+exchange.bank-by=https://nbrb.by/Services/XmlExRates.aspx
+exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
+exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
+exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
+exchange.cron.update=0 0 0/12 1/1 * ?
