--- a/src/main/resources/chart/charts.yaml
+++ b/src/main/resources/chart/charts.yaml
@@ -1,160 +1,160 @@
 mmbv:
-  titleRu: "Индекс ММВБ."
-  titleEn: "MICEX Index."
-  descRu: "ММВБ        — График ММВБ-индекса."
-  descEn: "MICEX     — MICEX index chart."
-  buttonRu: "ММВБ"
-  buttonEn: "MICEX"
-  apiUrl: "https://api.z-lab.me/charts/mmvb.png"
+  title_ru: "Индекс ММВБ."
+  title_en: "MICEX Index."
+  desc_ru: "ММВБ        — График ММВБ-индекса."
+  desc_en: "MICEX     — MICEX index chart."
+  button_ru: "ММВБ"
+  button_en: "MICEX"
+  api_url: "https://api.z-lab.me/charts/mmvb.png"
 usd_rub:
-  titleRu: "Курс USD/RUB по Forex."
-  titleEn: "USD/RUB rate from Forex."
-  descRu: "USD/RUB     — Текущий курс USD/RUB по Forex."
-  descEn: "USD/RUB   — Current USD/RUB rate from Forex."
-  buttonRu: "USD/RUB"
-  buttonEn: "USD/RUB"
-  apiUrl: "https://api.z-lab.me/charts/usd_rub_forex.png"
+  title_ru: "Курс USD/RUB по Forex."
+  title_en: "USD/RUB rate from Forex."
+  desc_ru: "USD/RUB     — Текущий курс USD/RUB по Forex."
+  desc_en: "USD/RUB   — Current USD/RUB rate from Forex."
+  button_ru: "USD/RUB"
+  button_en: "USD/RUB"
+  api_url: "https://api.z-lab.me/charts/usd_rub_forex.png"
 usd_uah:
-  titleRu: "Курс USD/UAH по Nasdaq, NYSE."
-  titleEn: "USD/UAH rate from Nasdaq, NYSE."
-  descRu: "USD/UAH     — Текущий курс USD/UAH по NYSE."
-  descEn: "USD/UAH   — Current USD/UAH rate from NYSE."
-  buttonRu: "USD/UAH"
-  buttonEn: "USD/UAH"
-  apiUrl: "https://api.z-lab.me/charts/usd_uah.png"
+  title_ru: "Курс USD/UAH по Nasdaq, NYSE."
+  title_en: "USD/UAH rate from Nasdaq, NYSE."
+  desc_ru: "USD/UAH     — Текущий курс USD/UAH по NYSE."
+  desc_en: "USD/UAH   — Current USD/UAH rate from NYSE."
+  button_ru: "USD/UAH"
+  button_en: "USD/UAH"
+  api_url: "https://api.z-lab.me/charts/usd_uah.png"
 eur_rub:
-  titleRu: "Курс EUR/RUB по Forex."
-  titleEn: "EUR/RUB rate from Forex."
-  descRu: "EUR/RUB     — Текущий курс EUR/RUB по Forex."
-  descEn: "EUR/RUB   — Current EUR/RUB rate from Forex."
-  buttonRu: "EUR/RUB"
-  buttonEn: "EUR/RUB"
-  apiUrl: "https://api.z-lab.me/charts/rub_eur_forex.png"
+  title_ru: "Курс EUR/RUB по Forex."
+  title_en: "EUR/RUB rate from Forex."
+  desc_ru: "EUR/RUB     — Текущий курс EUR/RUB по Forex."
+  desc_en: "EUR/RUB   — Current EUR/RUB rate from Forex."
+  button_ru: "EUR/RUB"
+  button_en: "EUR/RUB"
+  api_url: "https://api.z-lab.me/charts/rub_eur_forex.png"
 eur_usd:
-  titleRu: "Курс EUR/UAH по Forex."
-  titleEn: "EUR/UAH rate from Forex."
-  descRu: "EUR/UAH     — Текущий курс EUR/USD по Forex."
-  descEn: "EUR/UAH   — Current EUR/USD rate from Forex."
-  buttonRu: "EUR/UAH"
-  buttonEn: "EUR/UAH"
-  apiUrl: "https://api.z-lab.me/charts/eur_usd_forex.png"
+  title_ru: "Курс EUR/UAH по Forex."
+  title_en: "EUR/UAH rate from Forex."
+  desc_ru: "EUR/UAH     — Текущий курс EUR/USD по Forex."
+  desc_en: "EUR/UAH   — Current EUR/USD rate from Forex."
+  button_ru: "EUR/UAH"
+  button_en: "EUR/UAH"
+  api_url: "https://api.z-lab.me/charts/eur_usd_forex.png"
 gold:
-  titleRu: "Золото по Nasdaq."
-  titleEn: "Gold from Nasdaq."
-  descRu: "Золото      — Золото по Nasdaq."
-  descEn: "Gold      — Gold from Nasdaq."
-  buttonRu: "Золото"
-  buttonEn: "Gold"
-  apiUrl: "https://api.z-lab.me/charts/gold.png"
+  title_ru: "Золото по Nasdaq."
+  title_en: "Gold from Nasdaq."
+  desc_ru: "Золото      — Золото по Nasdaq."
+  desc_en: "Gold      — Gold from Nasdaq."
+  button_ru: "Золото"
+  button_en: "Gold"
+  api_url: "https://api.z-lab.me/charts/gold.png"
 palladium:
-  titleRu: "Палладий по Nasdaq."
-  titleEn: "Palladium from Nasdaq."
-  descRu: "Палладий    — Палладий по Nasdaq."
-  descEn: "Palladium — Palladium from Nasdaq."
-  buttonRu: "Палладий"
-  buttonEn: "Palladium"
-  apiUrl: "https://api.z-lab.me/charts/palladium.png"
+  title_ru: "Палладий по Nasdaq."
+  title_en: "Palladium from Nasdaq."
+  desc_ru: "Палладий    — Палладий по Nasdaq."
+  desc_en: "Palladium — Palladium from Nasdaq."
+  button_ru: "Палладий"
+  button_en: "Palladium"
+  api_url: "https://api.z-lab.me/charts/palladium.png"
 platinum:
-  titleRu: "Платина по Nasdaq."
-  titleEn: "Platinum from Nasdaq."
-  descRu: "Платина     — Платина по Nasdaq."
-  descEn: "Platinum  — Platinum from Nasdaq."
-  buttonRu: "Платина"
-  buttonEn: "Platinum"
-  apiUrl: "https://api.z-lab.me/charts/platinum.png"
+  title_ru: "Платина по Nasdaq."
+  title_en: "Platinum from Nasdaq."
+  desc_ru: "Платина     — Платина по Nasdaq."
+  desc_en: "Platinum  — Platinum from Nasdaq."
+  button_ru: "Платина"
+  button_en: "Platinum"
+  api_url: "https://api.z-lab.me/charts/platinum.png"
 rhodium:
-  titleRu: "Родий по Nasdaq."
-  titleEn: "Rhodium from Nasdaq."
-  descRu: "Родий       — Родий по Nasdaq."
-  descEn: "Rhodium   — Rhodium from Nasdaq."
-  buttonRu: "Родий"
-  buttonEn: "Rhodium"
-  apiUrl: "https://api.z-lab.me/charts/rhodium.png"
+  title_ru: "Родий по Nasdaq."
+  title_en: "Rhodium from Nasdaq."
+  desc_ru: "Родий       — Родий по Nasdaq."
+  desc_en: "Rhodium   — Rhodium from Nasdaq."
+  button_ru: "Родий"
+  button_en: "Rhodium"
+  api_url: "https://api.z-lab.me/charts/rhodium.png"
 silver:
-  titleRu: "Серебро по Nasdaq."
-  titleEn: "Silver from Nasdaq."
-  descRu: "Серебро     — Серебро по Nasdaq."
-  descEn: "Silver    — Silver from Nasdaq."
-  buttonRu: "Серебро"
-  buttonEn: "Silver"
-  apiUrl: "https://api.z-lab.me/charts/silver.png"
+  title_ru: "Серебро по Nasdaq."
+  title_en: "Silver from Nasdaq."
+  desc_ru: "Серебро     — Серебро по Nasdaq."
+  desc_en: "Silver    — Silver from Nasdaq."
+  button_ru: "Серебро"
+  button_en: "Silver"
+  api_url: "https://api.z-lab.me/charts/silver.png"
 rts:
-  titleRu: "Индекс РТС по ММВБ."
-  titleEn: "RTS Index from ММВБ (MICEX)."
-  descRu: "РТС         — График индекса РТС по ММВБ."
-  descEn: "RTS       — RTS Index chart from ММВБ (MICEX)."
-  buttonRu: "РТС"
-  buttonEn: "RTS"
-  apiUrl: "https://api.z-lab.me/charts/rts.png"
+  title_ru: "Индекс РТС по ММВБ."
+  title_en: "RTS Index from ММВБ (MICEX)."
+  desc_ru: "РТС         — График индекса РТС по ММВБ."
+  desc_en: "RTS       — RTS Index chart from ММВБ (MICEX)."
+  button_ru: "РТС"
+  button_en: "RTS"
+  api_url: "https://api.z-lab.me/charts/rts.png"
 btc_usd:
-  titleRu: "Курс BTC/USD по WorldCoinIndex."
-  titleEn: "BTC/USD rate from WorldCoinIndex."
-  descRu: "BTC/USD     — Текущий курс BTC/USD по WCI."
-  descEn: "BTC/USD   — Current BTC/USD rate from WCI."
-  buttonRu: "BTC/USD"
-  buttonEn: "BTC/USD"
-  apiUrl: "https://api.z-lab.me/charts/btc_usd.png"
+  title_ru: "Курс BTC/USD по WorldCoinIndex."
+  title_en: "BTC/USD rate from WorldCoinIndex."
+  desc_ru: "BTC/USD     — Текущий курс BTC/USD по WCI."
+  desc_en: "BTC/USD   — Current BTC/USD rate from WCI."
+  button_ru: "BTC/USD"
+  button_en: "BTC/USD"
+  api_url: "https://api.z-lab.me/charts/btc_usd.png"
 bcc_usd:
-  titleRu: "Курс BCC/USD по WorldCoinIndex."
-  titleEn: "BCC/USD rate from WorldCoinIndex."
-  descRu: "BCC/USD     — Текущий курс BCC/USD по WCI."
-  descEn: "BCC/USD   — Current BCC/USD rate from WCI."
-  buttonRu: "BCC/USD"
-  buttonEn: "BCC/USD"
-  apiUrl: "https://api.z-lab.me/charts/bcc_usd.png"
+  title_ru: "Курс BCC/USD по WorldCoinIndex."
+  title_en: "BCC/USD rate from WorldCoinIndex."
+  desc_ru: "BCC/USD     — Текущий курс BCC/USD по WCI."
+  desc_en: "BCC/USD   — Current BCC/USD rate from WCI."
+  button_ru: "BCC/USD"
+  button_en: "BCC/USD"
+  api_url: "https://api.z-lab.me/charts/bcc_usd.png"
 dsh_usd:
-  titleRu: "Курс DSH/USD по WorldCoinIndex."
-  titleEn: "DSH/USD rate from WorldCoinIndex."
-  descRu: "DSH/USD     — Текущий курс DSH/USD по WCI."
-  descEn: "DSH/USD   — Current DSH/USD rate from WCI."
-  buttonRu: "DSH/USD"
-  buttonEn: "DSH/USD"
-  apiUrl: "https://api.z-lab.me/charts/dsh_usd.png"
+  title_ru: "Курс DSH/USD по WorldCoinIndex."
+  title_en: "DSH/USD rate from WorldCoinIndex."
+  desc_ru: "DSH/USD     — Текущий курс DSH/USD по WCI."
+  desc_en: "DSH/USD   — Current DSH/USD rate from WCI."
+  button_ru: "DSH/USD"
+  button_en: "DSH/USD"
+  api_url: "https://api.z-lab.me/charts/dsh_usd.png"
 ltc_usd:
-  titleRu: "Курс LTC/USD по WorldCoinIndex."
-  titleEn: "LTC/USD rate from WorldCoinIndex."
-  descRu: "LTC/USD     — Текущий курс LTC/USD по WCI."
-  descEn: "LTC/USD   — Current LTC/USD rate from WCI."
-  buttonRu: "LTC/USD"
-  buttonEn: "LTC/USD"
-  apiUrl: "https://api.z-lab.me/charts/ltc_usd.png"
+  title_ru: "Курс LTC/USD по WorldCoinIndex."
+  title_en: "LTC/USD rate from WorldCoinIndex."
+  desc_ru: "LTC/USD     — Текущий курс LTC/USD по WCI."
+  desc_en: "LTC/USD   — Current LTC/USD rate from WCI."
+  button_ru: "LTC/USD"
+  button_en: "LTC/USD"
+  api_url: "https://api.z-lab.me/charts/ltc_usd.png"
 eth_usd:
-  titleRu: "Курс ETH/USD по WorldCoinIndex."
-  titleEn: "ETH/USD rate from WorldCoinIndex."
-  descRu: "ETH/USD     — Текущий курс ETH/USD по WCI."
-  descEn: "ETH/USD   — Current ETH/USD rate from WCI."
-  buttonRu: "ETH/USD"
-  buttonEn: "ETH/USD"
-  apiUrl: "https://api.z-lab.me/charts/eth_usd.png"
+  title_ru: "Курс ETH/USD по WorldCoinIndex."
+  title_en: "ETH/USD rate from WorldCoinIndex."
+  desc_ru: "ETH/USD     — Текущий курс ETH/USD по WCI."
+  desc_en: "ETH/USD   — Current ETH/USD rate from WCI."
+  button_ru: "ETH/USD"
+  button_en: "ETH/USD"
+  api_url: "https://api.z-lab.me/charts/eth_usd.png"
 iota_usd:
-  titleRu: "Курс IOTA/USD по WorldCoinIndex."
-  titleEn: "IOTA/USD rate from WorldCoinIndex."
-  descRu: "IOTA/USD    — Текущий курс IOTA/USD по WCI."
-  descEn: "IOTA/USD  — Current IOTA/USD rate from WCI."
-  buttonRu: "IOTA/USD"
-  buttonEn: "IOTA/USD"
-  apiUrl: "https://api.z-lab.me/charts/iota_usd.png"
+  title_ru: "Курс IOTA/USD по WorldCoinIndex."
+  title_en: "IOTA/USD rate from WorldCoinIndex."
+  desc_ru: "IOTA/USD    — Текущий курс IOTA/USD по WCI."
+  desc_en: "IOTA/USD  — Current IOTA/USD rate from WCI."
+  button_ru: "IOTA/USD"
+  button_en: "IOTA/USD"
+  api_url: "https://api.z-lab.me/charts/iota_usd.png"
 usd_rub_n:
-  titleRu: "Курс USD/RUB по Nasdaq, NYSE."
-  titleEn: "USD/RUB rate from Nasdaq, NYSE."
-  descRu: "USD/RUB N   — Текущий курс USD/RUB по NYSE."
-  descEn: "USD/RUB N — Current USD/RUB rate from NYSE."
-  buttonRu: "USD/RUB N"
-  buttonEn: "USD/RUB N"
-  apiUrl: "https://api.z-lab.me/charts/usd_rub.png"
+  title_ru: "Курс USD/RUB по Nasdaq, NYSE."
+  title_en: "USD/RUB rate from Nasdaq, NYSE."
+  desc_ru: "USD/RUB N   — Текущий курс USD/RUB по NYSE."
+  desc_en: "USD/RUB N — Current USD/RUB rate from NYSE."
+  button_ru: "USD/RUB N"
+  button_en: "USD/RUB N"
+  api_url: "https://api.z-lab.me/charts/usd_rub.png"
 brent:
-  titleRu: "Нефть Brent по Nasdaq, NYSE."
-  titleEn: "Brent oil from Nasdaq, NYSE."
-  descRu: "Нефть Brent — Нефть Brent USD/BBL по NYSE."
-  descEn: "Brent Oil — Brent oil USD/BBL rate from NYSE."
-  buttonRu: "Нефть Brent"
-  buttonEn: "Brent Oil"
-  apiUrl: "https://api.z-lab.me/charts/brent.png"
+  title_ru: "Нефть Brent по Nasdaq, NYSE."
+  title_en: "Brent oil from Nasdaq, NYSE."
+  desc_ru: "Нефть Brent — Нефть Brent USD/BBL по NYSE."
+  desc_en: "Brent Oil — Brent oil USD/BBL rate from NYSE."
+  button_ru: "Нефть Brent"
+  button_en: "Brent Oil"
+  api_url: "https://api.z-lab.me/charts/brent.png"
 wti:
-  titleRu: "Нефть WTI по Nasdaq, NYSE."
-  titleEn: "WTI oil from Nasdaq, NYSE."
-  descRu: "Нефть WTI   — Нефть WTI USD/BBL по NYSE."
-  descEn: "WTI Oil   — WTI oil USD/BBL rate from NYSE."
-  buttonRu: "Нефть WTI"
-  buttonEn: "WTI Oil"
-  apiUrl: "https://api.z-lab.me/charts/wti.png"
+  title_ru: "Нефть WTI по Nasdaq, NYSE."
+  title_en: "WTI oil from Nasdaq, NYSE."
+  desc_ru: "Нефть WTI   — Нефть WTI USD/BBL по NYSE."
+  desc_en: "WTI Oil   — WTI oil USD/BBL rate from NYSE."
+  button_ru: "Нефть WTI"
+  button_en: "WTI Oil"
+  api_url: "https://api.z-lab.me/charts/wti.png"
