Add ImageIO image detecting variant

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ general.lang=ru
 rest.timeout-sec=5
 rest.max-body-size=5242880
 
+image.use-probing=true
+image.download-file=true
+
 motofan.last-post-url=https://forum.motofan.ru/lastpost_json.php
 
 exchange.bank-ru=https://www.cbr.ru/scripts/XML_daily.asp?
