Implement simple echo telegram bot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.open-in-view=false
 
 general.lang=ru
 
+bot.token=${TG_TOKEN}
+bot.username=${TG_USERNAME}
+bot.log-updates=true
+
 rest.timeout-sec=5
 rest.max-body-size=5242880
 
@@ -23,4 +27,4 @@ exchange.bank-by=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
-exchange.cron.update=0 0 0/12 1/1 * ?
+exchange.cron-update=0 0 0/12 1/1 * ?
