--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
 	implementation 'org.jsoup:jsoup:1.12.1'
 	implementation 'org.yaml:snakeyaml:1.25'
+	implementation 'org.telegram:telegrambots:4.5'
+	implementation 'org.telegram:telegrambots-spring-boot-starter:4.5'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
