Refactor main bot class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ general.lang=ru
 bot.token=${TG_TOKEN}
 bot.username=${TG_USERNAME}
 bot.log-updates=true
+bot.max-updates=10
+bot.show-greetings=true
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
