--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@ general.lang=ru
 
 bot.token=${TG_TOKEN}
 bot.username=${TG_USERNAME}
-bot.log-updates=true
 bot.max-updates=10
-bot.show-greetings=true
+bot.max-send-length=3000
+bot.enable-notifications=false
+bot.debug-log-updates=true
+bot.debug-log-sends=true
+bot.debug-show-greetings=true
+bot.debug-silent=false
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
