--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
 general.lang=ru
+general.username-tag=%username%
 
 bot.token=${TG_TOKEN}
 bot.username=${TG_USERNAME}
@@ -16,6 +17,8 @@ bot.debug-log-updates=true
 bot.debug-log-sends=true
 bot.debug-show-greetings=true
 bot.debug-silent=false
+bot.debug-use-stack=true
+bot.callback-cooldown=5
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
