Add some bot abilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ general.username-tag=%username%
 
 bot.token=${TG_TOKEN}
 bot.username=${TG_USERNAME}
+bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
 bot.max-send-length=3000
 bot.enable-notifications=false
