Add scheduled commands

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,6 @@ exchange.bank-by=https://nbrb.by/Services/XmlExRates.aspx
 exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
-exchange.cron-update=0 0 0/12 1/1 * ?
+
+cron.bot.callbacks.clear=0 0 4 1/1 * ?
+cron.exchange.rates.update=0 0 0/12 1/1 * ?
