Drop lombok library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,11 @@ bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
 bot.max-send-length=3000
 bot.enable-notifications=false
-bot.debug-log-updates=true
-bot.debug-log-sends=true
-bot.debug-show-greetings=true
-bot.debug-silent=false
-bot.debug-use-stack=true
+bot.log-updates=true
+bot.log-sends=true
+bot.show-greetings=true
+bot.silent=false
+bot.use-stack=true
 bot.callback-cooldown=5
 
 rest.timeout-sec=5
