--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,17 +12,16 @@ general.lang=ru
 general.username-tag=%username%
 
 bot.token=${TG_TOKEN}
-bot.username=${TG_USERNAME}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
 bot.max-send-length=3000
-bot.enable-notifications=false
+bot.disable-notifications=false
 bot.log-updates=true
 bot.log-sends=true
 bot.show-greetings=true
 bot.silent=false
 bot.use-stack=true
-bot.callback-cooldown=5
+bot.cooldown=5
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
