Add /coffee command

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ bot.show-greetings=true
 bot.silent=false
 bot.use-stack=true
 bot.cooldown=5
+bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
