Add /hostip command

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ bot.silent=false
 bot.use-stack=true
 bot.cooldown=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
+bot.url-host-ip=https://ipecho.net/plain
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
