Add /game command

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ bot.use-stack=true
 bot.cooldown=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-host-ip=https://ipecho.net/plain
+bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 
 rest.timeout-sec=5
 rest.max-body-size=5242880
