Rename image probe option to image io read

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 rest.timeout-sec=5
 rest.max-body-size=5242880
 
-image.use-probing=true
 image.download-file=true
+image.use-image-io-read=true
 
 motofan.last-post-url=https://forum.motofan.ru/lastpost_json.php
 
