Implement Motofan Posts sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ bot.show-greetings=true
 bot.silent=false
 bot.use-stack=true
 bot.cooldown=5
+bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-host-ip=https://ipecho.net/plain
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
@@ -43,4 +44,5 @@ exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
 cron.bot.callbacks.clear=0 0 4 1/1 * ?
+cron.bot.motofan.crawler=0 0/20 * 1/1 * ?
 cron.exchange.rates.update=0 0 0/12 1/1 * ?
