Refactor crawler => receiver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,5 +44,5 @@ exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
 cron.bot.callbacks.clear=0 0 4 1/1 * ?
-cron.bot.motofan.crawler=0 0/20 * 1/1 * ?
+cron.bot.motofan.receiver=0 0/20 * 1/1 * ?
 cron.exchange.rates.update=0 0 0/12 1/1 * ?
