Update bot configuration, add answer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-host-ip=https://ipecho.net/plain
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
+# TODO: Debug chat uncomment in release
+#bot.motofan-chat-id=-1001045117849
+bot.motofan-chat-id=-1001148683293
+bot.motofan-chat-url=https://t.me/motofan_ru/
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
