Add check url method to util class and add new config field

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 #bot.motofan-chat-id=-1001045117849
 bot.motofan-chat-id=-1001148683293
 bot.motofan-chat-url=https://t.me/motofan_ru/
+bot.telegram-short-url=https://t.me/
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
