Check digest message on long length

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 bot.motofan-chat-id=-1001148683293
 bot.motofan-chat-url=https://t.me/motofan_ru/
 bot.telegram-short-url=https://t.me/
+bot.max-digest-length=400
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
