Add my favotite date format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.open-in-view=false
 
 general.lang=ru
 general.username-tag=%username%
+general.date-format=dd-MMM-yyyy HH:mm
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
