--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,9 @@ bot.motofan-chat-id=-1001148683293
 bot.motofan-chat-url=https://t.me/motofan_ru/
 bot.telegram-short-url=https://t.me/
 bot.max-digest-length=400
+bot.show-page-posts=25
+bot.show-chop-short=5
+bot.show-chop-long=20
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
