Preparation to implement /digest command and keyboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ bot.motofan-chat-url=https://t.me/motofan_ru/
 bot.telegram-short-url=https://t.me/
 bot.max-digest-length=400
 bot.show-page-posts=25
+bot.digest-page-posts=10
+bot.digest-page-count=5
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
