Fix keyboard and digest message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,7 @@ bot.telegram-short-url=https://t.me/
 bot.max-digest-length=400
 bot.show-page-posts=25
 bot.digest-page-posts=10
+bot.digest-page-deep=3
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
