Add avatar updating method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,6 +53,7 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
-cron.bot.callbacks.clear=0 0 4 1/1 * ?
+cron.bot.callbacks.clear=0 0 3 1/1 * ?
+cron.bot.avatars.update=0 0 4 1/1 * ?
 cron.bot.motofan.receiver=0 0/20 * 1/1 * ?
 cron.exchange.rates.update=0 0 0/12 1/1 * ?
