Implement digest shredder worker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,13 @@ bot.max-digest-length=400
 bot.show-page-posts=20
 bot.digest-page-posts=10
 bot.digest-page-deep=3
+# 45 sec for debug.
+# 43200 for 12-hours.
+# 86400 for 24-hours.
+# 172800 for 48-hours.
+# 604800 for a week.
+# 648000 for a week + one day.
+bot.obsolete-data-delay=648000
 
 rest.timeout-sec=10
 rest.max-body-size=5242880
@@ -56,4 +63,5 @@ exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 cron.bot.callbacks.clear=0 0 3 1/1 * ?
 cron.bot.avatars.update=0 0 4 1/1 * ?
 cron.bot.motofan.receiver=0 0/20 * 1/1 * ?
+cron.bot.digest.shredder=0 0 12 ? * MON
 cron.exchange.rates.update=0 0 0/12 1/1 * ?
