--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Session files ###
+*.session
+
+### Log files ###
+*.log
+
+### Python cache ###
+__pycache__
