Disable logging updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
 bot.max-send-length=3000
 bot.disable-notifications=true
-bot.log-updates=true
+bot.log-updates=false
 bot.show-greetings=true
 bot.silent=false
 bot.use-stack=true
