Fix properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm
 
+site.host=exlmoto.local
+site.address=//exlmoto.local/
+
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
