Bind form to site engine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ general.date-format=dd-MMM-yyyy HH:mm
 
 site.host=exlmoto.local
 site.address=//exlmoto.local/
+site.page-posts=20
+site.page-deep=5
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
