--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.open-in-view=false
 
+spring.resources.chain.enabled=true
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.html-application-cache=true
+spring.resources.chain.strategy.content.paths=/**
+
 general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm
