Implement digest model and other

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ site.host=exlmoto.local
 site.address=//exlmoto.local/
 site.page-posts=20
 site.page-deep=5
+site.motofan-chat-slug=@motofan_ru
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
