--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ site.address=//exlmoto.local/
 site.page-posts=20
 site.page-deep=5
 site.motofan-chat-slug=@motofan_ru
+site.moderators=yakimka,mbv06
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
