Add date/time and group filters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.resources.chain.strategy.content.paths=/**
 
 general.lang=ru
 general.username-tag=%username%
-general.date-format=dd-MMM-yyyy HH:mm
+general.date-format=dd-MMM-yyyy HH:mm:ss
 
 site.host=exlmoto.local
 site.address=//exlmoto.local/
