Fix filter avatar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ site.page-posts=20
 site.page-deep=5
 site.motofan-chat-slug=@motofan_ru
 site.moderators=yakimka,mbv06
+site.proxy=//digest.exlmoto.ru/proxy/
+site.proxy-enabled=true
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
