Use HOST parameter from environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
 
-site.address=//exlmoto.local/
+site.address=${HOST}
 site.page-posts=20
 site.page-deep=5
 site.motofan-chat-slug=@motofan_ru
