--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ site.motofan-chat-slug=@motofan_ru
 site.moderators=yakimka,mbv06
 site.proxy=//digest.exlmoto.ru/proxy/
 site.proxy-enabled=true
+site.autolinker-enabled=true
 
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
