--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.open-in-view=false
 spring.resources.chain.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.html-application-cache=true
-spring.resources.chain.strategy.content.paths=/**
+spring.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
 
 general.lang=ru
 general.username-tag=%username%
