Improve /hostip command

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ bot.use-stack=true
 bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
-bot.url-host-ip=https://ipecho.net/plain
+bot.url-host-ip=https://ipeaaacho.net/plain
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 # TODO: Debug chat uncomment in release
 #bot.motofan-chat-id=-1001045117849
