Move hostip to system report class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
 general.lang=ru
 general.username-tag=%username%
 general.date-format=dd-MMM-yyyy HH:mm:ss
+general.url-host-ip=https://ipecho.net/plain
 
 site.address=${HOST}
 site.page-posts=20
@@ -38,7 +39,6 @@ bot.use-stack=true
 bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
-bot.url-host-ip=https://ipecho.net/plain
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
 # TODO: Debug chat uncomment in release
 #bot.motofan-chat-id=-1001045117849
