Fix cron values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,8 +74,13 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
-cron.bot.callbacks.clear=0 0 3 1/1 * ?
-cron.bot.avatars.update=0 0 4 1/1 * ?
-cron.bot.motofan.receiver=0 0/20 * 1/1 * ?
-cron.bot.digest.shredder=0 0 12 ? * MON
-cron.exchange.rates.update=0 0 0/12 1/1 * ?
+# At 03:00 every day.
+cron.bot.callbacks.clear=0 0 3 * * *
+# At 04:00 every day.
+cron.bot.avatars.update=0 0 4 * * *
+# At every 20th minute.
+cron.bot.motofan.receiver=0 */20 * * * *
+# At 05:00 on Monday.
+cron.bot.digest.shredder=0 0 5 * * MON
+# At 13:00 every day.
+cron.exchange.rates.update=0 0 13 * * *
