Add TG_CHAT environment variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,9 @@ bot.cooldown=5
 bot.message-delay=5
 bot.sticker-coffee=CAADAgADzAEAAhGoNAVFRRJu94qe3gI
 bot.url-game=https://api.z-lab.me/img/lgsl/servers_stats.png
-# TODO: Debug chat uncomment in release
-#bot.motofan-chat-id=-1001045117849
-bot.motofan-chat-id=-1001148683293
+# -1001045117849 is MotoFan.Ru chat.
+# -1001148683293 is Debug chat.
+bot.motofan-chat-id=${TG_CHAT}
 bot.motofan-chat-url=https://t.me/motofan_ru/
 bot.telegram-short-url=https://t.me/
 bot.max-digest-length=400
