--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,6 +74,8 @@ exchange.bank-kz=https://nationalbank.kz/rss/rates_all.xml?switch=russian
 exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
+covid.url=https://covid.2gis.ru/
+
 # At 03:00 every day.
 cron.bot.callbacks.clear=0 0 3 * * *
 # At 04:00 every day.
