Add Telegram html generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,6 +75,7 @@ exchange.metal-ru=https://www.cbr.ru/hd_base/metall/metall_base_new/
 exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 
 covid.url=https://covid.2gis.ru/
+covid.date-format=dd-MMM-yyyy
 
 # At 03:00 every day.
 cron.bot.callbacks.clear=0 0 3 * * *
