Implement COVID-2019 report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ site.autolinker-enabled=true
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
-bot.max-send-length=3000
+bot.max-send-length=4000
 bot.disable-notifications=true
 bot.log-updates=false
 bot.show-greetings=true
@@ -87,3 +87,5 @@ cron.bot.motofan.receiver=0 */20 * * * *
 cron.bot.digest.shredder=0 0 5 * * MON
 # At 13:00 every day.
 cron.exchange.rates.update=0 0 13 * * *
+# At 20:00 every day.
+cron.bot.covid.report=0 0 20 * * *
