Add Morning worker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,7 +85,9 @@ cron.bot.avatars.update=0 0 4 * * *
 cron.bot.motofan.receiver=0 */20 * * * *
 # At 05:00 on Monday.
 cron.bot.digest.shredder=0 0 5 * * MON
-# At 13:00 every day.
-cron.exchange.rates.update=0 0 13 * * *
 # At 20:00 every day.
 cron.bot.covid.report=0 0 20 * * *
+# At 07:00 every day.
+cron.bot.morning.send=0 0 7 * * *
+# At 13:00 every day.
+cron.exchange.rates.update=0 0 13 * * *
