--- a/util/nginx/digest.conf
+++ b/util/nginx/digest.conf
@@ -1,27 +1,12 @@
 server {
     listen 80;
-    server_name digest.exlmoto.ru;
+    server_name digest.exlmoto.ru www.digest.exlmoto.ru;
+    return 301 https://digest.exlmoto.ru$request_uri;
+}
 
-    # note that these lines are originally from the "location /" block
-    # root   /srv/web;
-    # index index.php index.html index.htm;
-
-    # Optimizations ###############
-
-    ## Drop hidden files
-    #location ~ /\. {
-    #    deny all;
-    #}
-
-    ## Drop scripts
-    #location ~* /(?:uploads|files)/.*\.php$ {
-    #    deny all;
-    #}
-
-    ## Cache static
-    #location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
-    #    expires max;
-    #}
+server {
+    listen 443 ssl http2;
+    server_name digest.exlmoto.ru www.digest.exlmoto.ru;
 
     location / {
             proxy_pass http://localhost:8080/;
@@ -40,7 +25,7 @@ server {
         }
     }
 
-    location ^~ /cdn {
-        root /srv;
-    }
+    ssl on;
+    ssl_certificate /etc/letsencrypt/live/digest.exlmoto.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/digest.exlmoto.ru/privkey.pem;
 }
