--- a/util/nginx/digest.conf
+++ b/util/nginx/digest.conf
@@ -25,7 +25,16 @@ server {
         }
     }
 
-    ssl on;
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 9;
+    gzip_http_version 1.1;
+    gzip_min_length 2048;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
     ssl_certificate /etc/letsencrypt/live/digest.exlmoto.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/digest.exlmoto.ru/privkey.pem;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 }
