Prepare codebase for implementing control panel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,15 @@ general.url-host-ip=https://ipecho.net/plain
 site.address=${HOST}
 site.page-posts=20
 site.page-deep=5
+site.page-posts-admin=50
+site.page-deep-admin=10
 site.motofan-chat-slug=@motofan_ru
 site.moderators=yakimka,mbv06
 site.proxy=//digest.exlmoto.ru/proxy/
 site.proxy-enabled=true
 site.autolinker-enabled=true
 
-bot.initialize=true
+bot.initialize=false
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
