--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ site.obey-debug-username=root
 site.obey-debug-password=password
 site.obey-debug-role=Owner
 
-bot.initialize=true
+bot.initialize=false
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
