Update Telegram report generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ site.proxy=//digest.exlmoto.ru/proxy/
 site.proxy-enabled=true
 site.autolinker-enabled=true
 
-bot.initialize=false
+bot.initialize=true
 bot.token=${TG_TOKEN}
 bot.admins=exlmoto,ZorgeR
 bot.max-updates=10
