--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,10 @@ site.moderators=yakimka,mbv06
 site.proxy=//digest.exlmoto.ru/proxy/
 site.proxy-enabled=true
 site.autolinker-enabled=true
+site.obey-protection=true
+site.obey-debug-username=root
+site.obey-debug-password=password
+site.obey-debug-role=Owner
 
 bot.initialize=false
 bot.token=${TG_TOKEN}
