--- a/util/nginx/digest.conf
+++ b/util/nginx/digest.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+
 server {
     listen 80;
     server_name digest.exlmoto.ru www.digest.exlmoto.ru;
@@ -9,15 +11,27 @@ server {
     server_name digest.exlmoto.ru www.digest.exlmoto.ru;
 
     location / {
-            proxy_pass http://localhost:8080/;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Port $server_port;
+        proxy_pass http://localhost:8080/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
     }
 
-    # Reverse proxy ###############
-    # To avoid Roskomnadzor blocks
-    # See: http://www.nginx-discovery.com/2011/05/day-51-proxypass-and-resolver.html
+    # Drop brute-force attack on login form.
+    # Test:
+    #  $ ab -n 100 -c 10 digest.exlmoto.ru/ds-auth-login
+    location /ds-auth-login {
+        limit_req   zone=one  burst=1 nodelay;
+        proxy_pass http://localhost:8080/ds-auth-login;
+        proxy_redirect http://localhost:8080/obey /obey;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+    }
+
+    # Reverse proxy.
+    # To avoid Roskomnadzor blocks.
+    # See additional information: http://www.nginx-discovery.com/2011/05/day-51-proxypass-and-resolver.html
     location ^~ /proxy {
         resolver 8.8.8.8;
         location ~ "^/proxy/(.*)/(.*)" {
@@ -31,10 +45,10 @@ server {
     gzip_comp_level 9;
     gzip_http_version 1.1;
     gzip_min_length 2048;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/x-javascript text/javascript;
 
     ssl_certificate /etc/letsencrypt/live/digest.exlmoto.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/digest.exlmoto.ru/privkey.pem;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 }
