Improve help page and properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,7 +83,8 @@ exchange.metal-ru-mirror=https://mfd.ru/centrobank/preciousmetals/
 covid.url=https://covid.2gis.ru/
 covid.date-format=dd-MMM-yyyy
 
-# When changing these settings, be sure to update the localization files on "site.help.other" section.
+# When changing these settings, be sure to update the l10n files.
+# See "site.help.other" property and /subscribe command help on website.
 
 # At 03:00 every day.
 cron.bot.callbacks.clear=0 0 3 * * *
