--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.resources.chain.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.html-application-cache=true
 spring.resources.chain.strategy.content.paths=/icon/**,/image/**,/style/**
+spring.resources.cache.cachecontrol.max-age=365d
 
 general.lang=ru
 general.username-tag=%username%
