--- a/util/nginx/digest.conf
+++ b/util/nginx/digest.conf
@@ -1,14 +1,17 @@
 limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+proxy_cache_path /var/lib/nginx/cache levels=1:2 keys_zone=two:10m inactive=24h max_size=1g;
 
 server {
     listen 80;
-    server_name digest.exlmoto.ru www.digest.exlmoto.ru;
+    server_name digest.exlmoto.ru;
     return 301 https://digest.exlmoto.ru$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name digest.exlmoto.ru www.digest.exlmoto.ru;
+    server_name digest.exlmoto.ru;
+
+    proxy_cache two;
 
     location / {
         proxy_pass http://localhost:8080/;
